- Months now scroll infinitely just like Google's date picker. - @TODO, add year view - Removed dependency on ngTouch - Fixed double tap on mobile, selecting already selected time / date will fire OK

--- a/css/material-datetimepicker.css
+++ b/css/material-datetimepicker.css
@@ -103,7 +103,11 @@ md-dialog.dtp {
 
 .dtp table.dtp-picker-days {
     margin: 0;
-    min-height: 251px;
+    min-height: 220px;
+}
+
+.dtp md-virtual-repeat-container.months {
+    height: 260px;
 }
 
 .dtp table.dtp-picker-days, .dtp table.dtp-picker-days tr, .dtp table.dtp-picker-days tr > td {
@@ -113,14 +117,18 @@ md-dialog.dtp {
 .dtp table.dtp-picker-days tr > td {
     font-size: 11px;
     text-align: center;
-    padding: 5px 0;
+    padding: 0;
 }
 
 .dtp table.dtp-picker-days tr > td > span.dtp-select-day {
     color: #BDBDBD !important;
 }
-
-.dtp table.dtp-picker-days tr > td > a, .dtp .dtp-picker-time > a {
+.dtp table.dtp-picker-days tr > td > .dtp-select-day {
+    width: 36px;
+    height: 36px;
+    display: inline-block;
+}
+.dtp table.dtp-picker-days tr > td > .dtp-select-day, .dtp .dtp-picker-time > a {
     color: #212121;
     text-decoration: none;
     padding: 10px;
@@ -130,6 +138,10 @@ md-dialog.dtp {
 .dtp table.dtp-picker-days tr > td > a.selected {
     background: #8BC34A;
     color: #fff;
+}
+
+.dtp table.dtp-picker-days tr > td > a:hover:not(.selected) {
+    background: #dddddd;
 }
 
 .dtp table.dtp-picker-days tr > th {
